--- a/docs/TODO.yml
+++ b/docs/TODO.yml
@@ -1,3 +1,13 @@
 Parsing Excel Data:
   also add Doctor Username password to pwd.json
-  parsing Behandlungszeiten to usable data 
+  parsing Behandlungszeiten to usable data
+
+Registration:
+  Users:
+    choose multiple dental problems
+  Doctors:
+    implement master or one-time-password
+
+AuthService:
+  add function "addDoctor"
+  
