--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 /source/data/doctors.csv
 /source/data/patients.csv
 /source/data/pwd.json
+__pycache__/test_unittest.cpython-311.pyc
+.vscode/settings.json
+__pycache__/tests.cpython-311.pyc
+source/classes/__pycache__/app.cpython-311.pyc
+source/classes/__pycache__/login_sidebar.cpython-311.pyc
+source/classes/__pycache__/authentication_service.cpython-311.pyc
+source/classes/__pycache__/main_sidebar.cpython-311.pyc
+source/classes/__pycache__/mainLoginFrame.cpython-311.pyc
+source/classes/__pycache__/mainRegisterFrame.cpython-311.pyc
+source/classes/__pycache__/registerFormFrame.cpython-311.pyc
+source/classes/__pycache__/settings.cpython-311.pyc
+source/classes/__pycache__/timeSelector.cpython-311.pyc
+source/classes/__pycache__/tmp_main.cpython-311.pyc
+source/classes/customWidgets/__pycache__/dateAndTimeSelector.cpython-311.pyc
+source/classes/customWidgets/__pycache__/intSpinbox.cpython-311.pyc
+source/classes/__pycache__/loginFormFrame.cpython-311.pyc
