--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /source/data/doctors.csv
 /source/data/patients.csv
 /source/data/pwd.json
+/.gitignore
 __pycache__/test_unittest.cpython-311.pyc
 .vscode/settings.json
 __pycache__/tests.cpython-311.pyc
