Remove unnecessary TODO and fix typo in TODO.yml

--- a/docs/TODO.yml
+++ b/docs/TODO.yml
@@ -1,4 +1,3 @@
-# TODO: Anzahl zu behanlnder Zähne vom Patieten nach dem verbindlichen bestätigen abziehen 
 # TODO: Terminbuchung untersagen, wenn keine Zähne zu behandeln sind (eigener View dafür anstatt des costumize TreatmentFrame)
 # TODO: bei Termin ändern Termin zulassen, der sich mit dem vorher ausgewählten Termin überschniedet
 # TODO: Feedback im Finishframe, wenn Termin erfolgreich gebucht wurde
@@ -12,4 +11,4 @@
 # TODO: Powerpoint erstellen
 # TODO: Vortrag machen/üben
 
-# TODO: Dokumentation auf Github
+# TODO: Dokumentation auf Githubfdddddf
