--- a/docs/TODO.yml
+++ b/docs/TODO.yml
@@ -1,8 +1,8 @@
-# TODO: Terminbuchung untersagen, wenn keine Zähne zu behandeln sind (eigener View dafür anstatt des costumize TreatmentFrame)
 # TODO: bei Termin ändern Termin zulassen, der sich mit dem vorher ausgewählten Termin überschniedet
 # TODO: Feedback im Finishframe, wenn Termin erfolgreich gebucht wurde
 # TODO: Kennzeichnung des gebuchten Termins im Kalenderview
 # TODO: Aufteilung des Doctor Termin Overview nach Wochentagen
+# TODO: Textfeedback bei der Passwortänderung
 
 
 # TODO: Testing
