Add GUI design guidelines and usability heuristics

--- a/docs/TODO.yml
+++ b/docs/TODO.yml
@@ -1,6 +1,5 @@
-# TODO: Aufteilung des Doctor Termin Overview nach Wochentagen
-
 # TODO: Testing
+# TODO: verbliebene Englische Texte übersetzen
 # TODO: Anforderung aus der Vorlesung
 # TODO: GUI-Elemente aus der Vorlesung studieren, um zu schauen, welche wir schon benutzen (in die Powerpoint einfügen) oder welche uns auch noch fehlen könnten (gegebenenfalls noch implementieren)
 # TODO: Powerpoint erstellen
@@ -8,6 +7,11 @@
 
 # TODO: Dokumentation auf Githubfdddddf
 
+# Wenn noch Zeit ist:
+# TODO: Mehr Icons hinzufügen
+# TODO: Mehr Key-Shortcuts hinzufügen
+# TODO: Tooltipps hinzufügen
 
 # machen wir nicht mehr:
 # Nicht zulassen, dass ein Termin gebucht wird, der schon vorbei ist (heute frühere Zeit)
+# Aufteilung des Doctor Termin Overview nach Wochentagen
