--- a/docs/TODO.yml
+++ b/docs/TODO.yml
@@ -2,6 +2,7 @@
 # TODO: Konsolenerror der Tooltips bei schließen von TopLevel-Fenstern mit Buttons, die Tooltips haben, beheben
 # TODO: Übergebliebene Termin-Highlights im Kalender (Blaue) nach Wechseln des Arztes entfernen
 # TODO: Updaten der Daten aus dem customizeTreatmentFrame (Anzahl Zähne, Füllungsart) fixen
+# eventuell TODO: Errors catchen und feedback in der Konsole ausgeben, wenn Parsing-exce noch nicht ausgeführt wurde und versucht wird auf Files zuzugreifen, die noch nicht existieren / bzw pasing excel automatisch ausführen, wenn die files noch nicht existieren.
 
 # machen wir nicht mehr:
 # Nicht zulassen, dass ein Termin gebucht wird, der schon vorbei ist (heute frühere Zeit)
